--- a/src/index.html
+++ b/src/index.html
@@ -1,119 +1,298 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login-page</title>
-    <link rel="stylesheet" href="assets/style/style.css"> <!-- style -->
-    <script src="https://kit.fontawesome.com/1a1a4ebdab.js" crossorigin="anonymous"></script> <!-- icons -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Landing page</title>
 </head>
 
 <body>
-    <section class="container">
-        <section class="content first-content">
-            <div class="first-column">
-                <h2 class="title title-primary">Welcome back!</h2>
-                <p class="description description-primary">To keep connected with us</p>
-                <p class="description description-primary">please login with yours personal info</p>
-                <button id="signin" class="btn btn-primary" type="button"
-                    onclick="document.querySelector('body').className = 'sign-in'">sing in</button>
-            </div> <!-- first column -->
-            <div class="second-column">
-                <h2 class="title title-secondary">Create account</h2>
-                <div class="social-media"></div>
-                <li class="list-social-media">
-                    <a href="#" class="link-social-media">
-                        <il class="item-social-media facebook-icon">
-                            <i class="fab fa-facebook-f"></i>
-                        </il>
-                    </a>
-                    <a href="#" class="link-social-media">
-                        <il class="item-social-media google-icon">
-                            <i class="fab fa-google-plus-g"></i>
-                        </il>
-                    </a>
-                    <a href="#" class="link-social-media">
-                        <il class="item-social-media linkedin-icon">
-                            <i class="fab fa-linkedin-in"></i>
-                        </il>
-                    </a>
-                    <a href="#" class="link-social-media">
-                        <il class="item-social-media twitter-icon">
-                            <i class="fab fa-twitter"></i>
-                        </il>
-                    </a>
-                </li> <!-- social media -->
-                <p class="description description-secondary">or use your email for registration:</p>
-                <form class="form">
-                    <label class="label-input icon-modify">
-                        <i class="far fa-user"></i>
-                        <input type="text" placeholder="Name">
-                    </label>
-                    <label class="label-input icon-modify">
-                        <i class="far fa-envelope"></i>
-                        <input type="email" placeholder="E-mail" name="email">
-                    </label>
-                    <label class="label-input icon-modify">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
-                    </label>
-                    <a href="#" class="forgot-password">forgot your password?</a>
-                    <button class="btn btn-secondary">sing in</button>
-                </form> <!-- form -->
-                <!-- form -->
-            </div> <!-- second column -->
-        </section> <!-- first content -->
-        <section class="content second-content">
-            <div class="first-column">
-                <h2 class="title title-primary">Hello, friend!</h2>
-                <p class="description description-primary">Enter your personal datails</p>
-                <p class="description description-primary">and start your journay with us</p>
-                <button id="signup" class="btn btn-primary" type="button"
-                    onclick="document.querySelector('body').className = 'sign-up'">sing in</button>
-            </div> <!-- first column -->
-            <div class="second-column">
-                <h2 class="title title-secondary">sign in to developer</h2>
-                <div class="social-media"></div>
-                <li class="list-social-media">
-                    <a href="#" class="link-social-media">
-                        <il class="item-social-media facebook-icon">
-                            <i class="fab fa-facebook-f"></i>
-                        </il>
-                    </a>
-                    <a href="#" class="link-social-media">
-                        <il class="item-social-media google-icon">
-                            <i class="fab fa-google-plus-g"></i>
-                        </il>
-                    </a>
-                    <a href="#" class="link-social-media">
-                        <il class="item-social-media linkedin-icon">
-                            <i class="fab fa-linkedin-in"></i>
-                        </il>
-                    </a>
-                    <a href="#" class="link-social-media">
-                        <il class="item-social-media twitter-icon">
-                            <i class="fab fa-twitter"></i>
-                        </il>
-                    </a>
-                </li> <!-- social media -->
-                <p class="description description-secondary">or use your email acount:</p>
-                <form class="form">
-                    <label class="label-input icon-modify">
-                        <i class="far fa-envelope"></i>
-                        <input type="email" placeholder="E-mail">
-                    </label>
-                    <label class="label-input icon-modify">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
-                    </label>
-                    <a href="#" class="forgot-password">forgot your password?</a>
-                    <button class="btn btn-secondary">sing in</button>
-                </form> <!-- form -->
-            </div> <!-- second column -->
-        </section> <!-- section content -->
+    <input id="close-menu" class="close-menu"
+    type="checkbox" aria-label="close menu" role="button">
+    <label class="close-menu-label"
+    for="close-menu" title="close menu"></label>
+    <aside class="menu white-bg">
+        <div class="menu-content content-wrapper">
+            <h1>
+                <a href="#">logo</a>
+            </h1>
+            <nav>
+                <ul onclick="getElementById('close-menu').checked = false;">
+                    <li><a href="#intro">intro</a></li>
+                    <li><a href="#top-tree">top 3</a></li>
+                    <li><a href="#gallery">gallery</a></li>
+                    <li><a href="#recently-studied">recently studied</a></li>
+                    <li><a href="#table">table</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </aside>
+    <div class="menu-spacing"></div>
+    <section id="home" class="confetti-bg section">
+        <div class="content-wrapper home-content">
+            <div class="home-grid">
+                <h2 class="home-title">
+                    January brings us Firefox 85
+                </h2>
+                <p>
+                    To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are
+                    bringing you
+                    support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal
+                    of
+                    Flash support from Firefox.
+                </p>
+            </div>
+            <div class="home-img">
+                <img class="assets" src="assets/images/static-assets.svg" alt="html css and js logo">
+            </div>
+        </div>
     </section>
+    <section id="intro" class="white-bg section">
+        <div class="content-wrapper intro-flex intro-wrapper">
+            <h2 class="title">
+                databricks
+            </h2>
+            <p>
+                Databricks is an Apache Spark-based analytics platform. Designed with the founders of Apache Spark, with
+                Databricks we have streamlined workflows and an interactive workspace that enables collaboration between
+                data scientists, data engineers and business analysts.
+            </p>
+            <p>
+                With support for Python, Scala, R and SQL, as well as libraries and deep learning structures like
+                TensorFlow, Pytorch and Scikit-learn, using Databricks we eliminate all the hardness and complexity to
+                get a Spark cluster.Your notebooks provide an uninterrupted, seamless management experience thanks to
+                integration with leading cloud providers, including Amazon AWS and Microsoft Azure.
+            </p>
+
+        </div>
+    </section>
+    <section id="top-tree" class="confetti-bg section">
+        <div class="content-wrapper grid-wrapper">
+            <div class="top-tree-fc">
+                <h2 class="title">
+                    top 3 programming languages
+                </h2>
+                <p>Here are the 3 most requested languages ​​in the world</p>
+            </div>
+            <div class="grid">
+                <article class="grid-column">
+                    <h2>Python</h2>
+                    <p>
+                        One of the languages ​​that has grown the most and gained popularity in recent years is our
+                        first nomination. Python is extremely versatile and can be used in a wide variety of areas and
+                        to solve a variety of problems.
+                    </p>
+                </article>
+                <article class="grid-column">
+                    <h2>Java</h2>
+                    <p>
+                        Today, Java is the most used programming language within the corporate environment.The
+                        language's highlight is its focus on object orientation, which makes the technology robust and
+                        versatile. Applications written in Java can run on any platform, as long as the system has some
+                        implementation of the Java Virtual Machine (JVM) installed.
+                    </p>
+                </article>
+                <article class="grid-column">
+                    <h2>C and C++</h2>
+                    <p>
+                        Dividing the rank with Java among the most used programming languages ​​in the world, Although
+                        similar in name, C and C++ are different but share many common features. Learning each of them
+                        can provide an excellent foundation for programming professionals, as well as a good job offer
+                        for those who have mastered them.
+                    </p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="gallery" class="white-bg section">
+        <div class="content-wrapper gallery-wrapper">
+            <div class="gallery-fc">
+                <h2 class="title">
+                    gallery
+                </h2>
+                <p></p>
+            </div>
+            <div class="grid">
+                <div class="gallery-img-wrapper">
+                    <img class="gallery-img" src="assets/images/photo-1.jfif" alt="sunset">
+                </div>
+                <div class="gallery-img-wrapper">
+                    <img class="gallery-img" src="assets/images/photo-2.jfif" alt="mountain stream">
+                </div>
+                <div class="gallery-img-wrapper">
+                    <img class="gallery-img" src="assets/images/photo-3.jfif" alt="cityscape">
+                </div>
+                <div class="gallery-img-wrapper">
+                    <img class="gallery-img" src="assets/images/photo-4.jfif" alt="view of buildings from a balcony">
+                </div>
+                <div class="gallery-img-wrapper">
+                    <img class="gallery-img" src="assets/images/photo-5.jfif" alt="flowers and blackberries">
+                </div>
+                <div class="gallery-img-wrapper">
+                    <img class="gallery-img" src="assets/images/photo-6.jfif" alt="honey pot">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="recently-studied" class="confetti-bg section">
+        <div class="content-wrapper grid-wrapper">
+            <div class="top-tree-fc">
+                <h2 class="title">
+                    Programming languages ​​recently studied
+                </h2>
+                <p>Here a some recent work</p>
+            </div>
+            <div class="grid">
+                <article class="grid-column">
+                    <h2>Java</h2>
+                    <p>
+                        Today, Java is the most used programming language within the corporate environment.The
+                        language's highlight is its focus on object orientation, which makes the technology robust and
+                        versatile. Applications written in Java can run on any platform, as long as the system has some
+                        implementation of the Java Virtual Machine (JVM) installed.
+                    </p>
+                </article>
+                <article class="grid-column">
+                    <h2>C and C++</h2>
+                    <p>
+                        Dividing the rank with Java among the most used programming languages ​​in the world, Although
+                        similar in name, C and C++ are different but share many common features. Learning each of them
+                        can provide an excellent foundation for programming professionals, as well as a good job offer
+                        for those who have mastered them.
+                    </p>
+                </article>
+                <article class="grid-column">
+                    <h2>Javascript</h2>
+                    <p>
+                        Another programming language that is at the top of the most used is JavaScript. Despite the
+                        similarity with the name Java, this technology is more modern and focuses on areas such as web
+                        development, game creation and application for mobile devices. JavaScript may not be the easiest
+                        language to learn, but it is one of the most important. The technology usually runs in the
+                        browser, making learning easy and providing a very responsive interface for running code.
+                    </p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="table" class="white-bg section">
+        <div class="content-wrapper intro-flex intro-wrapper">
+            <h2 class="title">
+                what are tables?
+            </h2>
+            <p>
+                Tables are two-dimensional lists of data and are made up of rows and columns. Therefore, they are widely
+                used to present data in an organized way. A great example of how important tables are is the growing use
+                of the Excel program, a mandatory selection requirement for many companies.
+            </p>
+            <p>
+                But what about presenting a table on your website, how does it work? For this, there is the possibility
+                of creating tables through HTML itself, quickly and simply, through an HTML table.
+                See below an example table.
+            </p>
+            <div class="responsive-table">
+                <table>
+                    <caption>pricing table</caption>
+
+                    <thead>
+                        <tr>
+                            <th>Title 1</th>
+                            <th>Title 2</th>
+                            <th>Title 3</th>
+                            <th>Title 4</th>
+                            <th>Title 5</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                            <td>Content 4</td>
+                            <td>Content 5</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                            <td>Content 4</td>
+                            <td>Content 5</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                            <td>Content 4</td>
+                            <td>Content 5</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Testing</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="confetti-bg section">
+        <div class="content-wrapper home-content">
+            <div class="home-grid">
+                <h2 class="home-title">
+                    contact me
+                </h2>
+                <p>
+                    contact me by filling out the form below with your name, your best e-mail and your message.
+                </p>
+            </div>
+            <div class="home-img">
+                <img class="assets" src="assets/images/contact-us.svg" alt="html css and js logo">
+            </div>
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <div class="form-group">
+                        <label for="first-name">
+                            First name
+                        </label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Your name">
+                    </div>
+                    <div class="form-group">
+                        <label for="first-name">
+                            Last name
+                        </label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Your last name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">
+                            E-mail
+                        </label>
+                        <input type="email" name="email" id="email" placeholder="example@example.com.br">
+                    </div>
+                    <div class="form-group full-width">
+                        <label for="massage">
+                            Massage
+                        </label>
+                        <textarea name="massage" id="massage" cols="30" rows="10" placeholder="Your massage">
+                        </textarea>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit">Send message</button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+    <footer id="footer" class="footer white-bg">
+        <p><a href="">Made by higor grigorio</a></p>
+    </footer>
+    <a href="#" class="back-top">➤</a>
 </body>
 
 </html>
