--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,13 @@
     <label class="close-menu-label"
     for="close-menu" title="close menu"></label>
     <aside class="menu white-bg">
-        <div class="menu-content content-wrapper">
+        <div class="menu-content content-wrapper"
+        onclick="getElementById('close-menu').checked = false;">
             <h1>
                 <a href="#">logo</a>
             </h1>
             <nav>
-                <ul onclick="getElementById('close-menu').checked = false;">
+                <ul>
                     <li><a href="#intro">intro</a></li>
                     <li><a href="#top-tree">top 3</a></li>
                     <li><a href="#gallery">gallery</a></li>
